# celery-flask-example

./: app.py  pyproject.toml
