[tool.poetry]
name = "test_local_celery"
version = "0.1.0"
description = ""
authors = ["Fabrizio Gambino <fabrizio.gambino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
celery = "^5.2.7"
redis = "^4.3.4"
flower = "^1.2.0"
Flask-Migrate = "^3.1.0"
flask-sqlalchemy = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
